--- a/src/files/App.css
+++ b/src/files/App.css
@@ -1,38 +1,23 @@
-.App {
-  /* text-align: center; */
+.container {
+  /* padding-top: 40px; */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.imageandtext {
+  flex-direction: row;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding-left: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.text {
+  width: 50%;
+  /* margin-left: 20px; */
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.photo {
+  width: 50%;
+  height: 300px;
+}
+button {
+  width: 150px;
+  height: 40px;
+  background-color: lightgreen;
+  border-radius: 4px;
 }
